social links spacing fixed and minor sizing fix

--- a/css/main.css
+++ b/css/main.css
@@ -1591,10 +1591,6 @@ section#intro::after {
   .intro-social {
     font-size: 2.5rem;
   }
-
-  .intro-social li:not(:last-child) {
-    margin-right: 15px;
-  }
 }
 
 @media only screen and (max-width: 768px) {
@@ -1613,10 +1609,6 @@ section#intro::after {
 
   .intro-social {
     font-size: 2.3rem;
-  }
-
-  .intro-social li:not(:last-child) {
-    margin-right: 10px;
   }
 }
 
@@ -2011,7 +2003,7 @@ section#intro::after {
     padding-bottom: 0;
     padding-top: 2.1rem;
     margin-bottom: 0.6rem;
-    font-size: 1.7rem;
+    font-size: 1.6rem;
   }
 
   #resume .timeline-content h4::after {
@@ -2932,4 +2924,10 @@ footer .copyright p {
   box-shadow: 0 0 5px var, inset 0 0 5px #ff0077;
   /* background-color: #ff0077; */
   transition-delay: 0.2s all ease-in-out;
+}
+
+@media (max-width: 575px) {
+  .btn.wave-btn .liquid {
+    top: -60px;
+  }
 }
